--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,6 @@ theme: next-5.1.4
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repository: git@github.com:jeekdong/jeekdong.github.io.git
+  branch: master
